# xfem_3D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  discountinousTestProblem_1.h  main.cpp
src/: CMakeLists.txt  EllipticProblem.cpp  EllipticProblem.hpp  Fracture3D.cpp  Fracture3D.hpp  P1MatrixAssembler.cpp  P1MatrixAssembler.hpp  PhysicalParameters.cpp  PhysicalParameters.hpp  Pippo.cpp  Pippo.hpp  Utilities.cpp  Utilities.hpp  XfemDofHandler.cpp  XfemDofHandler.hpp  discontinousTestProblem_1.cpp  discontinousTestProblem_1.h  setZero.h  testAllZero.cpp  testAllZero.hpp  testOneZero.cpp  testOneZero.hpp  testZero.cpp
